:speech_balloon: edit name of job
Signed-off-by: Sindre Kjelsrud <kjelsrudsindre@gmail.com>

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Hello world action step
         run: echo "Hello 🌏!"
   build:
-    name: Task2
+    name: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
